# brainflop

./: README.md  brainflop.cabal
.github/workflows/: test.yml
brainflop/: Brainflop.hs
brainflop/Brainflop/: Executor.hs  Instr.hs  Parser.hs
brainflop/Engine/: Parser.hs
run/: run.hs
tests/: Syntax.hs  Utils.hs  test.hs
