cabal-version: 3.0
name:          brainflop
version:       0.1.0.0
license:       MIT
license-file:  LICENCE
author:        Sup#2.0
build-type:    Simple

library
    default-language: GHC2021
    hs-source-dirs:   brainflop
    exposed-modules:
        Brainflop,
        Brainflop.Instr
    other-modules:
        Engine.Parser,
        Brainflop.Parser,
        Brainflop.Executor
    build-depends:
      base ^>=4.18.3.0,
      containers

executable brainflop
    default-language: GHC2021
    hs-source-dirs:   run
    main-is:          run.hs
    build-depends:
        brainflop,
        base ^>=4.18.3.0,
        containers

test-suite brainflop-test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          test.hs
    other-modules:    Syntax, Utils
    build-depends:
        base ^>=4.18.3.0,
        brainflop,
        tasty,
        tasty-hunit,
        deepseq,
        containers,
        ansi-terminal
